--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@
                                         {{ room_count }} Rooms
                                     </small>
                                 </p>
-                                <a href="{{ url_for('building', building_id=building.id) }}" class="btn btn-primary">
+                                <a href="{{ url_for('main.building', building_id=building.id) }}" class="btn btn-primary">
                                     Explore Building
                                 </a>
                             </div>
