--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
                 <h4 class="mb-0"><i class="fas fa-user-plus me-2"></i>Register</h4>
             </div>
             <div class="card-body">
-                <form method="POST" action="{{ url_for('register') }}">
+                <form method="POST" action="{{ url_for('auth.register') }}">
                     {{ form.hidden_tag() }}
                     
                     <div class="mb-3">
@@ -60,7 +60,7 @@
                 </form>
             </div>
             <div class="card-footer text-center">
-                <p class="mb-0">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
+                <p class="mb-0">Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
             </div>
         </div>
     </div>
